[package]
name = "srati"
version = "0.1.0"
edition = "2021"

[lib]
name = "isaac"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.5.40", features = ["derive"] }

[build-dependencies]
cbindgen = "0.12"
